--- a/Blockbusta/Views/Movies/Details.cshtml
+++ b/Blockbusta/Views/Movies/Details.cshtml
@@ -45,6 +45,7 @@
 
     </dl>
 </div>
+<button type="submit" class="btn btn-default">@Html.ActionLink("Edit Movie", "Edit", "Movies", new { id = Model.Id }, null)</button>
 <p>
     @Html.ActionLink("Back to List", "Index")
 </p>
