--- a/Blockbusta/Views/Customer/Details.cshtml
+++ b/Blockbusta/Views/Customer/Details.cshtml
@@ -6,6 +6,7 @@
 }
 
 <h2>@Model.Name</h2>
+                   
 <ul>
     <li>Membership Type: @Model.MembershipType.Name</li>
     @if (Model.BirthDate != null)
@@ -14,3 +15,7 @@
     }
 
 </ul>
+<button type="submit" class="btn btn-default">@Html.ActionLink("Edit Customer", "Edit", "Customer", new { id = Model.Id }, null)</button>
+<p>
+    @Html.ActionLink("Back to List", "Index")
+</p>
