--- a/Blockbusta/Views/Customer/Index.cshtml
+++ b/Blockbusta/Views/Customer/Index.cshtml
@@ -5,8 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
-
+<h2>Customer List</h2>
+<button type="submit" class="btn btn-default">@Html.ActionLink("New Customer", "New", "Customer")</button>
 <table class="table">
     <tr>
         <th>
