--- a/Blockbusta/Views/Movies/Index.cshtml
+++ b/Blockbusta/Views/Movies/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h2>Index</h2>
-
+<button type="submit" class="btn btn-default">@Html.ActionLink("New Movie", "New", "Movies")</button>
 
 <table class="table">
     <tr>
